name:                opentracing
version:             0.1.0.0
synopsis:            OpenTracing for Haskell
-- description:
homepage:            https://github.com/kim/opentracing
license:             Apache-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
  ,README.md
cabal-version:       >=1.10

library
  exposed-modules:
      OpenTracing
      OpenTracing.Class
      OpenTracing.Simple
      OpenTracing.Types
      OpenTracing.Zipkin
      OpenTracing.Zipkin.HttpReporter

  build-depends:
      aeson
    , async
    , base
    , bytestring
    , case-insensitive
    , containers
    , exceptions
    , hashable
    , http-client
    , http-types
    , iproute
    , lens
    , mtl
    , mwc-random
    , semigroups
    , stm
    , text
    , time
    , transformers
    , unordered-containers

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -funbox-small-strict-fields


executable opentracing-example-simple
  main-is:          Simple.hs

  build-depends:
      base
    , lens
    , opentracing

  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2
