name:          example
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 2

executable opentracing-example
    main-is: Main.hs

    build-depends:
        base
      , lens
      , mtl

      , opentracing-indef
      , reporter-sig
      , reporter-simple
      , tracer-sig
      , tracer-simple

    ghc-options:      -Wall -O
    default-language: Haskell2010
