name:                opentracing-cloudtrace
version:             0.1.0.0
synopsis:            OpenTracing reporter for Google Cloudtrace (aka Stackdriver Trace)
-- description:
homepage:            https://github.com/kim/opentracing
license:             Apache-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
      OpenTracing.CloudTrace

  build-depends:
      aeson
    , base
    , exceptions
    , gogol
    , gogol-cloudtrace
    , http-client
    , lens
    , opentracing
    , text
    , time
    , unordered-containers

  default-language:  Haskell2010
  ghc-options:       -Wall -funbox-small-strict-fields
