name:                opentracing-examples
version:             0.1.0.0
synopsis:            OpenTracing Examples
-- description:
homepage:            https://github.com/kim/opentracing
license:             Apache-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
-- copyright:
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable opentracing-example-simple
  main-is:           Simple.hs

  build-depends:
      base
    , lens
    , opentracing

  default-language:  Haskell2010
  ghc-options:       -Wall -O2
