name:                opentracing-examples
version:             0.1.0.0
synopsis:            OpenTracing Examples
-- description:
homepage:            https://github.com/kim/opentracing
license:             Apache-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
-- copyright:
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Backends

  build-depends:
      base
    , lens
    , opentracing
    , opentracing-cloudtrace
    , opentracing-jaeger
    , opentracing-zipkin
    , opentracing-zipkin
    , optparse-applicative   >= 0.14
    , text

  default-language:  Haskell2010
  ghc-options:       -Wall -funbox-small-strict-fields
  hs-source-dirs:    src


executable opentracing-example-simple
  main-is:           Simple.hs

  build-depends:
      base
    , opentracing
    , opentracing-examples
    , optparse-applicative

  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts


executable opentracing-example-rpc
  main-is:           RPC.hs

  build-depends:
      async
    , base
    , bytestring
    , exceptions
    , http-client
    , http-types
    , lens
    , managed
    , mtl
    , opentracing
    , opentracing-examples
    , opentracing-http-client
    , opentracing-wai
    , optparse-applicative
    , vinyl
    , wai
    , warp

  default-language:  Haskell2010
  ghc-options:       -Wall -O2 -threaded -rtsopts
