cabal-version: 2.2

name:           opentracing-examples
version:        0.3.0.1
synopsis:       OpenTracing Examples
homepage:       https://github.com/kim/opentracing
bug-reports:    https://github.com/kim/opentracing/issues
author:         Kim Altintop
maintainer:     Kim Altintop <kim@eagain.io>
copyright:      Copyright (c) 2017-2022 Kim Altintop
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: git@github.com:kim/opentracing.git

common deps
  build-depends:
      base >= 4.9 && < 5
    , http-client
    , lens
    , opentracing
    , optparse-applicative >= 0.14
  ghc-options:
    -Wall
    -funbox-small-strict-fields
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Wnoncanonical-monad-instances

library
  import: deps
  exposed-modules:
      Backends
  other-modules:
      Paths_opentracing_examples
  autogen-modules:
      Paths_opentracing_examples
  hs-source-dirs:
      src
  build-depends:
      opentracing-jaeger
    , opentracing-zipkin-v1
    , opentracing-zipkin-v2
    , text >= 1.2
  default-language: Haskell2010

executable opentracing-example-rpc
  import: deps
  main-is: RPC.hs
  other-modules:
      Paths_opentracing_examples
  autogen-modules:
      Paths_opentracing_examples
  ghc-options:
    -O2
    -threaded
    -rtsopts
  build-depends:
      async
    , bytestring
    , exceptions
    , http-client
    , http-types
    , managed
    , mtl
    , opentracing-examples
    , opentracing-http-client
    , opentracing-wai
    , wai
    , warp
  default-language: Haskell2010

executable opentracing-example-simple
  import: deps
  main-is: Simple.hs
  other-modules:
      Paths_opentracing_examples
  autogen-modules:
      Paths_opentracing_examples
  ghc-options:
    -O2
    -threaded
    -rtsopts
  build-depends:
      opentracing-examples
  default-language: Haskell2010
