name:                opentracing-http-client
version:             0.1.0.0
synopsis:            OpenTracing instrumentation of http-client
-- description:
homepage:            https://github.com/kim/opentracing
license:             Apache-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Network.HTTP.Client.OpenTracing

  build-depends:
      base
    , http-client
    , lens
    , mtl
    , opentracing
    , text

  default-language:  Haskell2010
  ghc-options:       -Wall
