cabal-version: 2.2

name:           opentracing-http-client
version:        0.2.2
synopsis:       OpenTracing instrumentation of http-client
homepage:       https://github.com/kim/opentracing
bug-reports:    https://github.com/kim/opentracing/issues
author:         Kim Altintop
maintainer:     Kim Altintop <kim.altintop+opentracing@gmail.com>
copyright:      Copyright (c) 2017-2018 Kim Altintop
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: git@github.com:kim/opentracing.git

library
  exposed-modules:
      Network.HTTP.Client.OpenTracing
  other-modules:
      Paths_opentracing_http_client
  autogen-modules:
      Paths_opentracing_http_client
  ghc-options:
    -Wall
    -funbox-small-strict-fields
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Wnoncanonical-monad-instances
  build-depends:
      base >= 4.9 && < 4.17
    , http-client >= 0.5
    , lens >= 4.19
    , mtl >= 2.2
    , opentracing >= 0.1
    , text >= 1.2
  default-language: Haskell2010
