name:          opentracing-indef
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.25

library
    build-depends:
        base
      , containers
      , exceptions
      , text
      , unordered-containers

      , opentracing-types
      , reporter-config-sig
      , reporter-sig
      , tracer-sig

    exposed-modules:
        OpenTracing

    ghc-options:      -Wall
    default-language: Haskell2010
