name:                opentracing-jaeger
version:             0.1.0.0
synopsis:            Jaeger-compatible OpenTracing
-- description:
homepage:            https://github.com/kim/opentracing
license:             Apache-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
      OpenTracing.Jaeger
      OpenTracing.Jaeger.ThriftReporter

  other-modules:
      Jaeger_Consts
      Jaeger_Types
      Agent
      Agent_Client
      Agent_Types
      Agent_Iface
      Zipkincore_Types

  build-depends:
      base
    , bytestring
    , hashable
    , lens
    , mtl
    , network
    , opentracing
    , QuickCheck
    , text
    , thrift
    , unordered-containers
    , vector

  default-language:  Haskell2010
  ghc-options:       -Wall -funbox-small-strict-fields
  hs-source-dirs:    src, gen-src
