cabal-version: 2.2

name:           opentracing-jaeger
version:        0.2.2
synopsis:       Jaeger backend for OpenTracing
homepage:       https://github.com/kim/opentracing
bug-reports:    https://github.com/kim/opentracing/issues
author:         Kim Altintop
maintainer:     Kim Altintop <kim.altintop+opentracing@gmail.com>
copyright:      Copyright (c) 2017-2018 Kim Altintop
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: git@github.com:kim/opentracing.git

library
  exposed-modules:
      OpenTracing.Jaeger
      OpenTracing.Jaeger.AgentReporter
      OpenTracing.Jaeger.CollectorReporter
      OpenTracing.Jaeger.Propagation
      OpenTracing.Jaeger.Thrift
  other-modules:
      Agent.Client
      Agent.Server
      Agent.Types
      Jaeger.Client
      Jaeger.Server
      Jaeger.Types
      Zipkincore.Types
      Zipkincore.Server
  hs-source-dirs:
      src
      gen-src
  ghc-options:
    -Wall
    -funbox-small-strict-fields
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Wnoncanonical-monad-instances
  build-depends:
      QuickCheck
    , base >= 4.9 && < 4.17
    , bytestring >= 0.10
    , exceptions >= 0.8
    , hashable >= 1.2
    , http-client >= 0.5
    , http-types >= 0.9
    , lens >= 4.19
    , mtl >= 2.2
    , network >= 2.8
    , opentracing >= 0.1
    , safe-exceptions >= 0.1
    , text >= 1.2
    , pinch >= 0.4.0.0
    , vector-instances
    , unordered-containers >= 0.2
    , vector >= 0.12
  default-language: Haskell2010
