name:          opentracing-types
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.25

library
    exposed-modules:
        OpenTracing.Types

    build-depends:
        base
      , bytestring
      , containers
      , hashable
      , http-types
      , iproute
      , lens
      , network
      , text
      , time
      , unordered-containers

    ghc-options:      -Wall -funbox-small-strict-fields
    default-language: Haskell2010
