name:                opentracing-wai
version:             0.1.0.0
synopsis:            WAI middleware adding OpenTracing support
-- description:
homepage:            https://github.com/kim/opentracing
license:             Apache-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Network.Wai.Middleware.OpenTracing

  build-depends:
      base
    , containers
    , lens
    , opentracing
    , text
    , wai

  default-language:  Haskell2010
  ghc-options:       -Wall
