cabal-version: 2.2

name:           opentracing-wai
version:        0.2.2
synopsis:       Middleware adding OpenTracing tracing for WAI applications
homepage:       https://github.com/kim/opentracing
bug-reports:    https://github.com/kim/opentracing/issues
author:         Kim Altintop
maintainer:     Kim Altintop <kim.altintop+opentracing@gmail.com>
copyright:      Copyright (c) 2017-2018 Kim Altintop
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: git@github.com:kim/opentracing.git

library
  exposed-modules:
      Network.Wai.Middleware.OpenTracing
  other-modules:
      Paths_opentracing_wai
  autogen-modules:
      Paths_opentracing_wai
  ghc-options:
    -Wall
    -funbox-small-strict-fields
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Wnoncanonical-monad-instances
  build-depends:
      base >= 4.9 && < 4.17
    , lens >= 4.19
    , opentracing >= 0.1
    , text >= 1.2
    , wai >= 3.2
  default-language: Haskell2010
