cabal-version: 2.2

name:           opentracing-zipkin-common
version:        0.2.2
synopsis:       Zipkin OpenTracing Backend Commons
description:    Commons for the @opentracing-zipkin-v1@ and @opentracing-zipkin-v2@ packages
homepage:       https://github.com/kim/opentracing
bug-reports:    https://github.com/kim/opentracing/issues
author:         Kim Altintop
maintainer:     Kim Altintop <kim.altintop+opentracing@gmail.com>
copyright:      Copyright (c) 2017-2018 Kim Altintop
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: git@github.com:kim/opentracing.git

library
  exposed-modules:
      OpenTracing.Zipkin.Types
  other-modules:
      Paths_opentracing_zipkin_common
  autogen-modules:
      Paths_opentracing_zipkin_common
  ghc-options:
    -Wall
    -funbox-small-strict-fields
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Wnoncanonical-monad-instances
  build-depends:
      aeson >= 1.1
    , base >= 4.9 && < 4.17
    , opentracing >= 0.1
    , text >= 1.2
  default-language: Haskell2010
