cabal-version: 2.2

name:           opentracing-zipkin-v1
version:        0.2.2
synopsis:       Zipkin V1 backend for OpenTracing
homepage:       https://github.com/kim/opentracing
bug-reports:    https://github.com/kim/opentracing/issues
author:         Kim Altintop
maintainer:     Kim Altintop <kim.altintop+opentracing@gmail.com>
copyright:      Copyright (c) 2017-2018 Kim Altintop
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: git@github.com:kim/opentracing.git

library
  exposed-modules:
      OpenTracing.Zipkin.V1
      OpenTracing.Zipkin.V1.HttpReporter
      OpenTracing.Zipkin.V1.Thrift
  other-modules:
      Zipkincore.Client
      Zipkincore.Server
      Zipkincore.Types
  hs-source-dirs:
      src
      gen-src
  ghc-options:
    -Wall
    -funbox-small-strict-fields
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Wnoncanonical-monad-instances
  build-depends:
      QuickCheck >= 2.14
    , base >= 4.9 && < 4.17
    , bytestring >= 0.10
    , exceptions >= 0.8
    , hashable >= 1.2
    , http-client >= 0.5
    , http-types >= 0.9
    , iproute >= 1.7
    , lens >= 4.19
    , opentracing >= 0.1
    , opentracing-zipkin-common >= 0.1
    , pinch >= 0.4.0.0
    , text >= 1.2
    , unordered-containers >= 0.2
    , vector >= 0.12
    , vector-instances
  default-language: Haskell2010
