name:                opentracing-zipkin
version:             0.1.0.0
synopsis:            Zipkin-compatible OpenTracing
-- description:
homepage:            https://github.com/kim/opentracing
license:             Apache-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
      OpenTracing.Zipkin
      OpenTracing.Zipkin.HttpReporter

  build-depends:
      aeson
    , async
    , base
    , case-insensitive
    , containers
    , hashable
    , http-client
    , http-types
    , lens
    , mtl
    , mwc-random
    , opentracing
    , stm
    , text
    , time
    , unordered-containers

  default-language:  Haskell2010
  ghc-options:       -Wall -funbox-small-strict-fields
