name:                opentracing-zipkin
version:             0.1.0.0
synopsis:            Zipkin-compatible OpenTracing
-- description:
homepage:            https://github.com/kim/opentracing
license:             Apache-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
      OpenTracing.Zipkin.HttpReporter
      OpenTracing.Zipkin.Thrift
      OpenTracing.Zipkin.Types

  other-modules:
      ZipkinCore_Consts
      ZipkinCore_Types

  build-depends:
      aeson
    , async
    , base
    , bytestring
    , hashable
    , http-client
    , http-types
    , iproute
    , lens
    , mtl
    , mwc-random
    , opentracing
    , QuickCheck
    , safe-exceptions
    , stm
    , text
    , thrift
    , time
    , unordered-containers
    , vector

  default-language:  Haskell2010
  ghc-options:       -Wall -funbox-small-strict-fields
  hs-source-dirs:    src, gen-src
