name:                opentracing
version:             0.1.0.0
synopsis:            OpenTracing for Haskell
-- description:
homepage:            https://github.com/kim/opentracing
license:             Apache-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:
      OpenTracing
      OpenTracing.Log
      OpenTracing.Propagation
      OpenTracing.Reporting
      OpenTracing.Sampling
      OpenTracing.Span
      OpenTracing.Standard
      OpenTracing.Tags
      OpenTracing.Time
      OpenTracing.Types

  build-depends:
      aeson
    , async
    , base
    , base64-bytestring
    , bytestring
    , case-insensitive
    , clock
    , containers
    , http-client
    , http-types
    , iproute
    , lens
    , mtl
    , mwc-random
    , network
    , safe-exceptions
    , semigroups
    , stm
    , text
    , time
    , transformers
    , unordered-containers
    , vinyl

  default-language:  Haskell2010
  ghc-options:       -Wall -funbox-small-strict-fields
