cabal-version: 2.2

name:           opentracing
version:        0.2.2
synopsis:       OpenTracing for Haskell
homepage:       https://github.com/kim/opentracing
bug-reports:    https://github.com/kim/opentracing/issues
author:         Kim Altintop
maintainer:     Kim Altintop <kim.altintop+opentracing@gmail.com>
copyright:      Copyright (c) 2017-2018 Kim Altintop
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: git@github.com:kim/opentracing.git

library
  exposed-modules:
      OpenTracing
      OpenTracing.Log
      OpenTracing.Propagation
      OpenTracing.Reporting
      OpenTracing.Reporting.Batch
      OpenTracing.Reporting.Pure
      OpenTracing.Reporting.Stdio
      OpenTracing.Sampling
      OpenTracing.Span
      OpenTracing.Standard
      OpenTracing.Tags
      OpenTracing.Time
      OpenTracing.Tracer
      OpenTracing.Types
  other-modules:
      Paths_opentracing
  autogen-modules:
      Paths_opentracing
  ghc-options:
    -Wall
    -funbox-small-strict-fields
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Wnoncanonical-monad-instances
  build-depends:
      aeson >= 1.1
    , async >= 2.1
    , base  >= 4.9 && < 4.17
    , base64-bytestring >= 1.0
    , bytestring >= 0.10
    , case-insensitive >= 1.2
    , clock >= 0.7
    , containers >= 0.5
    , http-types >= 0.9
    , iproute >= 1.7
    , lens >= 4.19
    , mtl >= 2.2
    , mwc-random >= 0.13
    , network >= 2.8
    , safe-exceptions >= 0.1
    , semigroups >= 0.18
    , stm >= 2.4
    , text >= 1.2
    , time >= 1.6
    , transformers >= 0.5
    , unordered-containers >= 0.2
    , uri-bytestring >= 0.2
    , vinyl >= 0.9
  default-language: Haskell2010
