name:          reporter-config-zipkin-http
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.25

library
    build-depends:
        aeson
      , base
      , http-client
      , iproute
      , network
      , text

      , opentracing-types

    exposed-modules:
        Zipkin.Reporter.Config

    reexported-modules:
        Zipkin.Reporter.Config as OpenTracing.Reporter.Config

    ghc-options:      -Wall -funbox-small-strict-fields
    default-language: Haskell2010
