name:          reporter-zipkin-http
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.25

library
    build-depends:
        aeson
      , base
      , containers
      , http-client
      , http-types
      , lens
      , mtl
      , text
      , time
      , unordered-containers

      , opentracing-types
      , reporter-config-zipkin-http
      , tracer-zipkin

    exposed-modules:
        Zipkin.Reporter

    reexported-modules:
        Zipkin.Reporter as OpenTracing.Reporter

    ghc-options:      -Wall -funbox-small-strict-fields
    default-language: Haskell2010
