name:          tracer-sig
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.25

library
    build-depends:
        base
      , containers
      , exceptions
      , mtl
      , text
      , transformers
      , unordered-containers

      , opentracing-types
      , reporter-config-sig

    signatures:
        OpenTracing.Tracer

    exposed-modules:
        OpenTracing.Tracer.Class

    ghc-options:      -Wall
    default-language: Haskell2010
