name:          tracer-simple
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.25

library
    build-depends:
        aeson
      , base
      , case-insensitive
      , containers
      , hashable
      , lens
      , mtl
      , mwc-random
      , opentracing-types
      , reporter-config-sig
      , serialise
      , text
      , unordered-containers

    exposed-modules:
        OpenTracing.Tracer.Simple

    reexported-modules:
        OpenTracing.Tracer.Simple as OpenTracing.Tracer

    ghc-options:      -Wall -funbox-small-strict-fields
    default-language: Haskell2010
