name:          tracer-simple
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.25

library
    build-depends:
        aeson
      , base
      , case-insensitive
      , containers
      , exceptions
      , hashable
      , lens
      , mtl
      , mwc-random
      , serialise
      , text
      , unordered-containers

      , opentracing-types
      , reporter-config-sig

    exposed-modules:
        OpenTracing.Tracer.Simple

    reexported-modules:
        OpenTracing.Tracer.Simple as OpenTracing.Tracer

    ghc-options:      -Wall -funbox-small-strict-fields
    default-language: Haskell2010
