name:          tracer-zipkin
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.25

library
    build-depends:
        base
      , case-insensitive
      , containers
      , exceptions
      , hashable
      , lens
      , mtl
      , mwc-random
      , serialise
      , text
      , unordered-containers

      , opentracing-types
      , reporter-config-sig

    exposed-modules:
        Zipkin.Tracer

    reexported-modules:
        Zipkin.Tracer as OpenTracing.Tracer

    ghc-options:      -Wall -funbox-small-strict-fields
    default-language: Haskell2010
