name:          simple
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 2

executable opentracing-example-simple
    main-is: Main.hs

    build-depends:
        base
      , lens
      , mtl

      , opentracing-indef
      , reporter-simple
      , tracer-simple

    ghc-options:      -Wall -O
    default-language: Haskell2010
